plugins {
    id 'maven-publish'
    id 'java-library'
    id 'jacoco'
    id 'com.github.kt3k.coveralls' version '2.6.3'
    //    id 'com.bmuschko.nexus' version '2.3.1' //EOL as of Gradle 7.0
    //    id 'io.codearte.nexus-staging' version '0.11.0'
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url "https://jitpack.io" }
}

sourceCompatibility = '18'
targetCompatibility = '18'

group = 'com.axlabs'
archivesBaseName = 'ip2asn2cc-jfs415'
version = '1.0.0'

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifactId = archivesBaseName
            from components.java
        }
    }
}

dependencies {
    implementation 'commons-io:commons-io:2.7'
    implementation 'commons-net:commons-net:3.9.0'
    implementation 'commons-validator:commons-validator:1.5.1'
    implementation 'com.googlecode.java-ipv6:java-ipv6:0.16'

    implementation 'ch.qos.logback:logback-classic:1.2.9'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.1'
}

test {
    useJUnitPlatform()
}

jacoco {
    toolVersion = "0.8.5"
    reportsDirectory = file("$buildDir/reports/jacoco")
}

jacocoTestReport {
    group = "Reporting"
    description = "Generate Jacoco coverage reports after running tests."
    reports {
        xml.required = true
        html.required = true
        csv.required = true
    }
}

//EOL as of Gradle 7.0
//modifyPom {
//    project {
//        name 'IP2ASN2CC'
//        description 'Java library to check whether an IP address or ASN is registered in a country.'
//        url 'https://github.com/axlabs-team/ip2asn2cc'
//        inceptionYear '2015'
//        scm {
//            url 'https://github.com/axlabs-team/ip2asn2cc'
//            connection 'scm:https://github.com/axlabs-team/ip2asn2cc.git'
//            developerConnection 'scm:https://github.com/axlabs-team/ip2asn2cc.git'
//        }
//        licenses {
//            license {
//                name 'The Apache Software License, Version 2.0'
//                url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
//                distribution 'repo'
//            }
//        }
//        developers {
//            developer {
//                id 'gsmachado'
//                name 'gsmachado'
//                email 'guil@axlabs.com'
//            }
//        }
//    }
//}

//extraArchive {
//    sources = true
//    tests = true
//    javadoc = true
//}

//nexus {
//    sign = true
//    repositoryUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
//    snapshotRepositoryUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
//}